# workshop-eotdl-bids25

./: .gitignore  01_eotdl.ipynb  01_exploring.ipynb  02_exploring.ipynb  03_ingesting_dataset.ipynb  04_stac.ipynb  05_private_datasets.ipynb  06_creating.ipynb  07_training.ipynb  08_inference.ipynb  08_ingesting_models.ipynb  09_contributing.ipynb  09_ingesting_models.ipynb  10_contributing.ipynb  README.md  pyproject.toml
workshop_data/EuroSAT-small/: README.md  catalog.parquet
